# koan

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  INSTALL.md  Makefile  README.md  SECURITY.md  docker-compose.yml  env.example  projects.example.yaml  pyproject.toml  setup-docker.sh
.github/workflows/: release.yml  tests.yml
docs/: README.md  analysis-state-bugs.md  analysis-state-flow.md  github-commands.md  jira-integration.md  memory-injection.md  pr-links.md  provider-codex.md  skills.md  user-manual.md
docs/architecture/: daemon.md  github-and-trackers.md  memory.md  mission-lifecycle.md  overview.md  providers.md  shared-state.md  skills-system.md  state-consistency.md
docs/design/: decisions.md  memory-injection.md
docs/messaging/: github-commands.md  jira-integration.md  matrix.md  telegram.md
docs/operations/: dashboard.md  interactive-launcher.md  rest-api.md  rtk.md  troubleshooting.md
docs/providers/: claude.md  cline.md  codex.md  copilot.md  ollama-launch.md  openrouter.md
docs/security/: prompt-guard.md  threat-model-agent-disalignment.md
docs/setup/: docker.md
docs/users/: model-configuration.md  onboarding.md  skills.md  user-manual.md
instance.example/: config.yaml  missions.md  recurring.json
instance.example/events/: daily-brief.json
koan/: requirements.txt
koan/app/: activity_usage_logger.py  agent_state.py  ai_runner.py  attention.py  auto_update.py  awake.py  bridge_state.py  burn_rate.py  caveman.py  check_runner.py  check_tracker.py  checkpoint_manager.py  ci_dispatch.py  ci_queue.py  ci_queue_runner.py  claude_step.py  (+113 more)
(+360 files in other folders)
